--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,19 @@
+[build-system]
+requires = ["setuptools>=68", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "hygeia-graph"
 version = "0.1.0"
-description = "Graph-based analysis tool for healthcare contracts"
+description = "Hygeia-Graph: Mixed Graphical Models for medical network analysis (Streamlit + R mgm)."
+readme = "README.md"
 requires-python = ">=3.10"
+
+[tool.setuptools]
+package-dir = {"" = "src"}
+
+[tool.setuptools.packages.find]
+where = ["src"]
 
 [tool.ruff]
 line-length = 100
