--- a/.dockerignore
+++ b/.dockerignore
@@ -1,5 +1,9 @@
 # Docker build context exclusions
 
+# Git
+.git/
+.gitignore
+
 # Python
 __pycache__/
 *.py[cod]
@@ -34,23 +38,16 @@ env/
 *.swp
 *.swo
 
-# Git
-.git/
-.gitignore
-
 # Testing/caching
 .pytest_cache/
 .ruff_cache/
 .mypy_cache/
 .coverage
 htmlcov/
+tests/
 
 # Reports (not needed in container)
 reports/
-
-# Documentation
-*.md
-!README.md
 
 # OS files
 .DS_Store
