--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,26 @@ ENV/
 .vscode/
 .idea/
 *.swp
+*.swo
+
+# Testing/Caching
+.pytest_cache/
+.ruff_cache/
+.mypy_cache/
+.coverage
+htmlcov/
+.tox/
+.nox/
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Jupyter
+.ipynb_checkpoints/
+
+# Local config
+*.local
+
+# Logs
+*.log
