feat: Major feature update - multi-format upload, example datasets, descriptives, UX improvements
- Add multi-format file support (CSV, Excel, Stata, SPSS, SAS)
- Add 3 example datasets (Easy/Medium/Hard)
- Add descriptive statistics module with normality tests
- Add UX guidance and Next-step navigation
- Add heavy module guardrails (Bootnet/NCT/LASSO)
- Add minimal UI workflow with Clear-all button
- Add privacy notices for ephemeral files
- Update .gitignore with temp files patterns
- Add scipy dependency for statistical tests

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,23 @@ Thumbs.db
 
 # Logs
 *.log
+
+# Temp files
+tmp/
+temp/
+*.tmp
+workdir_*/
+
+# R outputs
+*.rds
+*.RData
+*.Rhistory
+
+# Data files (uploaded by users - not to be committed)
+data/*.csv
+data/*.xlsx
+data/*.dta
+data/*.sav
+
+# Artifacts directory (local only)
+.artifacts/
