Fix critical errors: render_temporal_page, R script paths, and code quality improvements
## Major Fixes

### 1. Import Error Resolution
- **Fixed ImportError**: Added missing render_temporal_page function in ui_pages.py
- **Added temporal support**: Complete VAR analysis interface with validation, settings, and results display
- **Import fix**: Added run_temporal_var_subprocess import

### 2. R Script Path Resolution
- **Fixed WinError 2**: Updated publication_pack_interface.py to use get_rscript_path()
- **Rscript detection**: Use full path from diagnostics instead of hardcoded 'Rscript'
- **Cross-platform compatibility**: Works on Windows with custom R paths

### 3. Session State Management
- **Added missing variables**: Added 'analysis_id' and 'config_hash' to session state defaults
- **Fixed simulation page**: Added node availability check before target_node selection
- **State consistency**: Proper initialization prevents 'Please run MGM Analysis first' errors

### 4. Code Quality Improvements
- **Removed unused variables**: mean_val, total_effect, power_vec, rec
- **Fixed duplicate keys**: Separated duplicate 'en'/'vi' keys in locale.py
- **Import cleanup**: Removed unused imports (typing.Optional, shutil, load_csv, typing.List)
- **Whitespace fixes**: Removed trailing whitespace and formatting issues

### 5. Temporal Analysis Implementation
- **Complete interface**: Settings panel with time/group column selection
- **Validation integration**: Uses temporal_validation for data checks
- **Results display**: Tabs for temporal edges, contemporaneous edges, PDC/PCC matrices
- **Export functionality**: CSV downloads and ZIP bundle for all results

### 6. Race Condition Fix
- **Temp file safety**: Improved temporary file handling with proper context managers

## Test Results
- ✅ All imports working
- ✅ Streamlit app starts successfully
- ✅ Publication Pack R script path resolved
- ✅ Simulation page no longer crashes on missing nodes
- ✅ Temporal page functional with

--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,12 @@ data/*.sav
 
 # Artifacts directory (local only)
 .artifacts/
+
+# Generated Reports & Exports
+temporal_analysis.zip
+diagnostics.json
+*.zip
+
+# Temporary scripts
+test_*.py
+!tests/test_*.py
